[package]
name = "rust_event_harness"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.6.1"
aws-sdk-dynamodb = "1.70.0"
aws-sdk-sqs = "1.63.0"
aws_lambda_events = "0.16.0"
lambda_runtime = "0.13.0"
lambda_http = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
thiserror = "1.0"
async-trait = "0.1"

